# py-libraries-analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: static.yml
dataset/: top-pypi-packages.json
datastory/: PROMPT.md  index.html
scripts/: generate_json_report.sh  generate_treemap.py  generate_treemap_data.py  get_packages.py
ty_outputs/: aiobotocore.json  aiohttp.json  aiosignal.json  annotated-types.json  anyio.json  asn1crypto.json  async-timeout.json  attrs.json  awscli.json  boto3.json  botocore.json  cachetools.json  certifi.json  cffi.json  chardet.json  charset-normalizer.json  click.json  colorama.json  coverage.json  cryptography.json  decorator.json  distlib.json  exceptiongroup.json  frozenlist.json  fsspec.json  google-api-core.json  google-auth.json  google-cloud-core.json  google-cloud-storage.json  google-resumable-media.json  greenlet.json  grpcio-tools.json  grpcio.json  h11.json  httpcore.json  httpx.json  idna.json  importlib-metadata.json  isodate.json  itsdangerous.json  (+54 more)
verification/: README.md
verification/reports/arrow/: bug_report_conan_recipe.md  reproduce_bug.py  ty-result.txt
verification/reports/scikit-learn/: bug_report.md  repro_bugs.py  repro_time.py  ty-result.txt
verification/reports/setuptools/: reproduce_issues.py  setuptools.tar.zst  ty-result.txt  ty_bug_report.md
verification/reports/sqlalchemy/: reproduce_async_orm_null_bug.py  reproduce_mssql_bug.py  reproduce_space_invaders_bug.py  ty_bug_report.md
verification/reports/wrapt/: bug_report.md  ty-result.txt  wrapt.tar.zst
visualizer/: index.html
