[project]
name = "py-libraries-analysis"
version = "1.0.0"
description = "Static code quality audit of the most-downloaded PyPI libraries."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.3.3",
    "requests==2.32.5",
    "ty==0.0.10",
]

[dependency-groups]
dev = [
    "black==25.12.0",
    "isort==7.0.0",
]
